--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			let ws = null;
 
 			function connect() {
-				ws = new WebSocket(`${location.protocol.replace("http", "ws")}//${location.host}/ws`);
+				ws = new WebSocket(`${location.protocol.replace("http", "ws")}//${location.host}/chat/ws`);
 				ws.onopen = () => {
 					term.clear();
 				};
