--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<script type="text/javascript" src="https://unpkg.com/xterm-addon-canvas@0.3.0"></script>
 		<script type="text/javascript">
 			if(location.protocol === "http:") {
-				location.reload(location.path.replace("http", "https"));
+				location.assign(location.href.replace("http", "https"));
 			}
 
 			const enc = new TextEncoder();
