--- a/index.html
+++ b/index.html
@@ -24,52 +24,74 @@
 				location.assign(location.href.replace("http", "https"));
 			}
 
-			const enc = new TextEncoder();
+			function start() {
+				const enc = new TextEncoder();
 
-			const term = new Terminal();
-			const fitAddon = new FitAddon.FitAddon();
-			term.loadAddon(new WebLinksAddon.WebLinksAddon());
-			term.loadAddon(fitAddon);
-			term.loadAddon(new CanvasAddon.CanvasAddon());
-			term.open(document.querySelector(".terminal"));
-			fitAddon.fit();
+				const term = new Terminal();
+				const fitAddon = new FitAddon.FitAddon();
+				term.loadAddon(new WebLinksAddon.WebLinksAddon());
+				term.loadAddon(fitAddon);
+				term.loadAddon(new CanvasAddon.CanvasAddon());
+				term.open(document.querySelector(".terminal"));
+				fitAddon.fit();
 
-			window.onresize = () => fitAddon.fit();
+				window.onresize = () => fitAddon.fit();
 
-			let ws = null;
+				let ws = null;
 
-			function connect() {
-				ws = new WebSocket(`${location.protocol.replace("http", "ws")}//${location.host}/chat/ws`);
-				ws.onopen = () => {
-					term.clear();
-				};
-				ws.onmessage = async e => {
-					term.write(new Uint8Array(await e.data.arrayBuffer()));
-				};
-				ws.onclose = () => {
-					ws = null;
-					setTimeout(() => connect(), 1000);
-				};
+				function connect() {
+					ws = new WebSocket(`${location.protocol.replace("http", "ws")}//${location.host}/chat/ws`);
+					ws.onopen = () => {
+						ws.send(localStorage.privateKey);
+						term.clear();
+					};
+					ws.onmessage = async e => {
+						term.write(new Uint8Array(await e.data.arrayBuffer()));
+					};
+					ws.onclose = () => {
+						ws = null;
+						setTimeout(() => connect(), 1000);
+					};
+				}
+
+				connect();
+
+				term.onData(text => {
+					if(ws) {
+						ws.send(enc.encode(text.replace(/\r/g, "\r\n")));
+					}
+				});
+				term.onBinary(data => {
+					if(ws) {
+						ws.send(data);
+					}
+				});
+
+				setInterval(() => {
+					if(ws) {
+						ws.send("");
+					}
+				}, 60 * 1000);
 			}
 
-			connect();
+			(async () => {
+				if(!localStorage.privateKey) {
+					const key = await crypto.subtle.generateKey(
+						{
+							name: "RSASSA-PKCS1-v1_5",
+							modulusLength: 2048,
+							publicExponent: new Uint8Array([0x01, 0x00, 0x01]),
+							hash: {name: "SHA-256"}
+						},
+						true,
+						["sign", "verify"]
+					);
+					const pkcs8 = await crypto.subtle.exportKey("pkcs8", key.privateKey);
+					localStorage.privateKey = btoa(String.fromCharCode(...new Uint8Array(pkcs8)));
+				}
 
-			term.onData(text => {
-				if(ws) {
-					ws.send(enc.encode(text.replace(/\r/g, "\r\n")));
-				}
-			});
-			term.onBinary(data => {
-				if(ws) {
-					ws.send(data);
-				}
-			});
-
-			setInterval(() => {
-				if(ws) {
-					ws.send("");
-				}
-			}, 60 * 1000);
+				start();
+			})();
 		</script>
 	</body>
 </html>
